--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3'
 
 services:
-  app:
+  web:
     container_name: 'api'
     build: .
     ports:
       - "8000:8000"
+    environment:
+      MONGODB_URI: "mongodb://localhost:27017"
     restart: unless-stopped
     volumes:
       - .:/usr/src/app/
@@ -18,7 +20,7 @@ services:
       image: 'mongo:latest'
       container_name: 'mongodb'
       ports:
-        - '27100:27017'
+        - '27017:27017'
       networks: 
         - backend
 
