--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,10 @@ services:
       image: 'mongo:latest'
       container_name: 'keepsafe_mongodb'
       environment:
-        MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME:-root}
-        MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-root}
+        MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-root}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-root}
       ports:
-        - '27017:27017'
+        - '27017:${MONGO_PORT:-27017}'
       volumes:
         - mongo:/data/db
       healthcheck:
